--- a/src/main/resources/db/changelog/008-create-review_photos.yaml
+++ b/src/main/resources/db/changelog/008-create-review_photos.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 8
       author: Roman
       changes:
         - createTable:
-            tableName: carts
+            tableName: review_photos
             columns:
               - column:
                   name: id
@@ -12,16 +12,17 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-                    nullable: false
               - column:
-                  name: user_id
+                  name: file_name
+                  type: VARCHAR(255)
+              - column:
+                  name: review_id
                   type: BIGINT
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
-            constraintName: fk_cart_user
-            baseTableName: carts
-            baseColumnNames: user_id
-            referencedTableName: users
+            baseTableName: review_photos
+            baseColumnNames: review_id
+            referencedTableName: reviews
             referencedColumnNames: id
-            onDelete: CASCADE
+            constraintName: fk_review_photos_review
