--- a/src/main/resources/db/changelog/002-create-roles.yaml
+++ b/src/main/resources/db/changelog/002-create-roles.yaml
@@ -1,25 +1,24 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 2
       author: Roman
       changes:
         - createTable:
-            tableName: categories
+            tableName: roles
             columns:
               - column:
                   name: id
                   type: BIGINT
-                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     nullable: false
+                    autoIncrement: true
               - column:
                   name: name
                   type: VARCHAR(255)
                   constraints:
                     nullable: false
+                    unique: true
               - column:
                   name: description
                   type: VARCHAR(255)
-                  constraints:
-                    nullable: true
