--- a/src/main/resources/db/changelog/007-create-reviews.yaml
+++ b/src/main/resources/db/changelog/007-create-reviews.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 7
       author: Roman
       changes:
         - createTable:
-            tableName: discounts
+            tableName: reviews
             columns:
               - column:
                   name: id
@@ -12,26 +12,12 @@ databaseChangeLog:
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-                    nullable: false
               - column:
-                  name: name
-                  type: VARCHAR(255)
-                  constraints:
-                    nullable: false
+                  name: text
+                  type: TEXT
               - column:
-                  name: percentage
-                  type: DOUBLE
-              - column:
-                  name: amount
-                  type: DOUBLE
-              - column:
-                  name: start_date
-                  type: TIMESTAMP
-                  constraints:
-                    nullable: false
-              - column:
-                  name: end_date
-                  type: TIMESTAMP
+                  name: user_id
+                  type: BIGINT
                   constraints:
                     nullable: false
               - column:
@@ -39,9 +25,30 @@ databaseChangeLog:
                   type: BIGINT
                   constraints:
                     nullable: false
+              - column:
+                  name: rating
+                  type: INTEGER
+                  constraints:
+                    nullable: false
+              - column:
+                  name: created_at
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
+              - column:
+                  name: updated_at
+                  type: TIMESTAMP
+                  constraints:
+                    nullable: false
         - addForeignKeyConstraint:
-            baseTableName: discounts
+            baseTableName: reviews
+            baseColumnNames: user_id
+            referencedTableName: users
+            referencedColumnNames: id
+            constraintName: fk_reviews_user
+        - addForeignKeyConstraint:
+            baseTableName: reviews
             baseColumnNames: product_id
             referencedTableName: products
             referencedColumnNames: id
-            constraintName: fk_discounts_products
+            constraintName: fk_reviews_product
