--- a/src/main/resources/db/changelog/012-create-addresses.yaml
+++ b/src/main/resources/db/changelog/012-create-addresses.yaml
@@ -1,57 +1,45 @@
 databaseChangeLog:
   - changeSet:
-      id: 1
+      id: 17
       author: Roman
       changes:
         - createTable:
-            tableName: reviews
+            tableName: addresses
             columns:
               - column:
                   name: id
-                  type: BIGINT
+                  type: INT
                   autoIncrement: true
                   constraints:
                     primaryKey: true
-                    nullable: false
-              - column:
-                  name: text
-                  type: TEXT
-                  constraints:
-                    nullable: false
               - column:
                   name: user_id
                   type: BIGINT
                   constraints:
                     nullable: false
               - column:
-                  name: product_id
-                  type: BIGINT
+                  name: street
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: rating
-                  type: INTEGER
+                  name: city
+                  type: VARCHAR(255)
                   constraints:
                     nullable: false
               - column:
-                  name: created_at
-                  type: TIMESTAMP
+                  name: zip_code
+                  type: VARCHAR(20)
                   constraints:
                     nullable: false
               - column:
-                  name: updated_at
-                  type: TIMESTAMP
+                  name: country
+                  type: VARCHAR(100)
                   constraints:
                     nullable: false
         - addForeignKeyConstraint:
-            baseTableName: reviews
+            baseTableName: addresses
             baseColumnNames: user_id
             referencedTableName: users
             referencedColumnNames: id
-            constraintName: fk_reviews_users
-        - addForeignKeyConstraint:
-            baseTableName: reviews
-            baseColumnNames: product_id
-            referencedTableName: products
-            referencedColumnNames: id
-            constraintName: fk_reviews_products
+            constraintName: fk_addresses_user
