--- a/src/main/resources/db.changelog-master.yaml
+++ b/src/main/resources/db.changelog-master.yaml
@@ -37,3 +37,5 @@ databaseChangeLog:
       file: db/changelog/018-insert-roles.yaml
   - include:
       file: db/changelog/019-insert-categories.yaml
+  - include:
+      file: db/changelog/020-insert-products.yaml
